--- a/w00test/tutor4u/assets/css/mystyle.css
+++ b/w00test/tutor4u/assets/css/mystyle.css
@@ -22,7 +22,7 @@ article, aside, footer, header, main, nav, section {
 
 /* formats the  main body of the webpage */
 body {
-    border: 5px solid red;
+    border: 1px solid green;
     width: 960px;
     margin-left: auto;
     margin-right: auto;
