--- a/w5/3maltst/assets/css/mystyle.css
+++ b/w5/3maltst/assets/css/mystyle.css
@@ -1,6 +1,9 @@
+@import "templatecolours.css";
+
 body {
     max-width: 960px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* font-family: 'Roboto', sans-serif; */
