--- a/w5/3maltst/assets/css/mystyle.css
+++ b/w5/3maltst/assets/css/mystyle.css
@@ -34,4 +34,35 @@ li a:hover {
     color: #363636;
 }
 
+/* sizes csdm logo*/
+#csdmlogo {
+    width: 300px;
+}
+/* sizes banner*/
+#banner {
+    width: 960px;
+}
+/* sizes head of school's image*/
+#hos {
+    width: 200px;
+}
+
+/* text styling*/
+
+h1 {
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+}
+
+p, h2, h3, h4, h5, a {
+    font-family: Roboto, sans-serif;
+    font-weight: 400;
+}
+
+h3, h4, h5 {
+    font-family: Roboto, sans-serif;
+    font-weight: 700;
+}
+
+
 /* font-family: 'Roboto', sans-serif; */
