--- a/w5/3maltst/assets/css/mystyle.css
+++ b/w5/3maltst/assets/css/mystyle.css
@@ -64,5 +64,46 @@ h3, h4, h5 {
     font-weight: 700;
 }
 
+#hos {
+    width: 200px;
+    float: left;
+    padding-right: 10px;
+}
 
-/* font-family: 'Roboto', sans-serif; */
+#news {
+    background-color: #DBC9DF;
+}
+
+#events {
+    background-color: #782A7E;
+}
+
+footer {
+    background-color: #363636;
+}
+
+aside {
+    color: white;
+}
+
+aside p, h3, h4 {
+    margin: 0;
+}
+aside h3 {
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+aside h4 {
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+aside p {
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
