--- a/w3/1woc/mystyles.css
+++ b/w3/1woc/mystyles.css
@@ -1,4 +1,15 @@
-h1, h2 {
+/* @import "templatecolours.css"; */
 
-    color;
+body {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+section {
+
+}
+
+header {
+
 }
