--- a/w10/assets/css/styles.css
+++ b/w10/assets/css/styles.css
@@ -1,7 +1,7 @@
 @import "templatecolours.css";
 
 body {
-    width: 960px;
+    max-width: 960px;
     margin-left: auto;
     margin-right: auto;
 }
