--- a/w10/assets/css/templatecolours.css
+++ b/w10/assets/css/templatecolours.css
@@ -1,5 +1,5 @@
 body {
-    background-color: red;
+    background-color: ghostwhite;
 }
 
 header {
@@ -19,7 +19,7 @@ aside {
 }
 
 article {
-    background-color: red;
+    background-color: #adadad;
 }
 
 form {
