--- a/tbxc/style.css
+++ b/tbxc/style.css
@@ -14,7 +14,7 @@ button {
 }
 
 input[type=text], input[type=password] {
-    border: 1px solid grey;
+    border: 1px solid red;
     border-radius: 10px;
     width: 100%;
     padding: 10px 0;
