--- a/tbxc/style.css
+++ b/tbxc/style.css
@@ -1,5 +1,5 @@
 button {
-    background-color: darkgreen;
+    background-color: darkred;
     color: white;
     border: none;
     border-radius: 5px;
