--- a/tbxc/style.css
+++ b/tbxc/style.css
@@ -1,5 +1,5 @@
 button {
-    background-color: darkgreen
+    background-color: darkgreen;
     border: none;
     border-radius: 5px;
     width: 100%;
