--- a/tbxc/assets/style.css
+++ b/tbxc/assets/style.css
@@ -13,7 +13,7 @@ button {
     width: auto;
 }
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
     border: 2px solid grey;
     border-radius: 5px;
     width: 100%;
